--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.0",
+    "typemoq": "^2.1.0",
     "typescript": "^3.0.1"
   },
   "dependencies": {
