--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.1.4",
+    "@types/colors": "^1.2.1",
+    "@types/js-yaml": "^3.11.2",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.4",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "commander": "^2.16.0"
+    "colors": "^1.3.2",
+    "commander": "^2.16.0",
+    "js-yaml": "^3.12.0"
   }
 }
