--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "chevrotain": "^3.7.4",
     "colors": "^1.3.2",
     "commander": "^2.16.0",
     "js-yaml": "^3.12.0"
