--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/colors": "^1.2.1",
+    "@types/dot": "^1.1.2",
     "@types/js-yaml": "^3.11.2",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.4",
@@ -27,6 +28,7 @@
     "chevrotain": "^3.7.4",
     "colors": "^1.3.2",
     "commander": "^2.16.0",
+    "dot": "^1.1.2",
     "js-yaml": "^3.12.0"
   }
 }
