--- a/examples/test.yml
+++ b/examples/test.yml
@@ -85,3 +85,12 @@ TrainingCategories:
 
 TrainingAssignment: ./TrainingAssignment.yaml#TrainingAssignment
 UserTrainingDueDate: ./UserTrainingDueDate.yaml#UserTrainingDueDate
+
+EntityAllow:
+  properties:
+    authenticatorId: string
+    name: string
+    type: string allow("Property", "Contact", "Role", "Team", "Listing", "DevelopmentSite", "DevelopmentClient")
+    value: string allow("ViewOnly", "OwnAttachments", "Edit", "Unrestricted")
+    hasChanged: boolean default(0)
+    isAdded: boolean
