Fix CLI support for asyncronous commands - switched from `commander` to `yargs`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
     "tslint.autoFixOnSave": true,
     "files.exclude": {
         "node_modules": true,
-        "dist": true
+        "dist": false
     }
 }
