--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepublishOnly": "npm test && npx tsc",
-    "pretest": "tslint ./src/**/*.ts",
+    "pretest": "tslint -c tslint.json src/**/*.ts",
     "test": "npx mocha -r ts-node/register \"src/**/*.spec.ts\""
   },
   "files": [
