--- a/examples/test.yml
+++ b/examples/test.yml
@@ -43,6 +43,8 @@ Training:
   references:
     Categories: multiple of Category via TrainingCategories
     CommonName: single of CommonName on commonNameId
+    Test: single of Category
+    TestMultiple: multiple of Category
 
 User:
   properties:
