--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/yargs": "^11.1.1",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "prettier": "^1.14.3",
+    "prettier-tslint": "^0.4.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
