trying to improve azure pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,4 +12,7 @@ steps:
   inputs:
     versionSpec: $(node_version)
 
-- script: npm install && npm test
+- script: |
+    npm install
+    npx tslint --project .
+    npm test
