--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
 jobs:
 - job: Test
-
+  pool:
+    vmImage: 'ubuntu-16.04'
   steps:
   - task: NodeTool@0 
     inputs:
@@ -11,6 +12,8 @@ jobs:
       npm test
 
 - job: Publish
+  pool:
+    vmImage: 'ubuntu-16.04'
   dependsOn: Test
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/tags/*'))
   steps:
