more work on cd

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,9 @@ jobs:
       SYSTEM_ACCESSTOKEN: $(npm.accessToken)
     inputs:
       versionSpec: '10.x'
-  - script: |
-      echo "//registry.npmjs.org/:_authToken=$SYSTEM_ACCESSTOKEN" > ./npmrc
-      npm install
-      npm publish
+  - script: npm install
+  - task: Npm@1
+    inputs:
+        command: publish
+        publishEndpoint: 'npmjs'
 
