Azure pipelines publish (#40)
* trying to make this work

* more work on cd

* trying to make this stupid thing work

* removed env

* please build

* build again!

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,12 @@ jobs:
   condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
   steps:
   - task: NodeTool@0
-    env:
-      SYSTEM_ACCESSTOKEN: $(npm.accessToken)
     inputs:
       versionSpec: '10.x'
-  - script: |
-      echo "//registry.npmjs.org/:_authToken=$SYSTEM_ACCESSTOKEN" > ./npmrc
-      npm install
-      npm publish
+  - script: npm install
+  - task: Npm@1
+    inputs:
+        command: publish
+        publishRegistry: useExternalRegistry
+        publishEndpoint: npmjs
 
