refactored property options to objects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,13 @@
       "**/.DS_Store": true,
       "node_modules": true,
       "dist": false
-    }
+    },
+    "mochaExplorer.files": "src/**/*.spec.ts",
+    "mochaExplorer.optsFile": "",
+    "testExplorer.gutterDecoration": true,
+    "testExplorer.codeLens": true,
+    "mochaExplorer.require": [
+      "ts-node/register"
+    ]
   }
   
