--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@types/chai": "^4.1.4",
     "@types/colors": "^1.2.1",
     "@types/js-yaml": "^3.11.2",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.4",
     "@types/yargs": "^11.1.1",
     "chai": "^4.1.2",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "prettier": "^1.14.3",
     "prettier-tslint": "^0.4.0",
-    "ts-node": "^7.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
