--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
       "**/CVS": true,
       "**/.DS_Store": true,
       "node_modules": true,
-      "dist": false
+      "dist": true
     },
     "mochaExplorer.files": "src/**/*.spec.ts",
     "mochaExplorer.optsFile": "",
