added encrypted and hashed to SecurablePropertyType

--- a/examples/filmactor.yml
+++ b/examples/filmactor.yml
@@ -20,4 +20,4 @@ Actor:
     id: integer primary auto(1,1)
     firstName: string(100)
     lastName: string(100)
-    dateOfBirth: datetime
+    dateOfBirth: datetime encrypted @sensitive
