--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   dependsOn: Test
-  condition: and(succeeded(), and(in(variables['Build.SourceBranch'], 'refs/tags/'), contains(variables['Build.SourceBranch'])))
+  condition: and(succeeded(), and(in(variables['Build.SourceBranch'], 'refs/tags/'), contains(variables['Build.SourceBranch'], '-')))
   steps:
   - task: NodeTool@0
     inputs:
