--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   dependsOn: Test
-  condition: and(succeeded(), and(startsWith($(Build.SourceBranch), 'refs/tags/'), not(contains($(Build.SourceBranch), '-'))))
+  condition: and(succeeded(), and(startsWith(variables['Build.SourceBranch'], 'refs/tags/'), not(contains(variables['Build.SourceBranch'], '-'))))
   steps:
   - task: NodeTool@0
     inputs:
@@ -31,7 +31,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   dependsOn: Test
-  condition: and(succeeded(), and(startsWith($(Build.SourceBranch), 'refs/tags/'), contains($(Build.SourceBranch), '-')))
+  condition: and(succeeded(), and(startsWith(variables['Build.SourceBranch'], 'refs/tags/'), contains(variables['Build.SourceBranch'], '-')))
   steps:
   - task: NodeTool@0
     inputs:
