--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,14 +20,8 @@
       "**/CVS": true,
       "**/.DS_Store": true,
       "node_modules": true,
-      "dist": true
-    },
-    "mochaExplorer.files": "src/**/*.spec.ts",
-    "mochaExplorer.optsFile": "",
-    "testExplorer.gutterDecoration": true,
-    "testExplorer.codeLens": true,
-    "mochaExplorer.require": [
-      "ts-node/register"
-    ]
+      "dist": false
+    }
+  
   }
   
