new config is functional

--- a/examples/cradle.yml
+++ b/examples/cradle.yml
@@ -3,4 +3,9 @@ loader:
   options:
     source: './models/**/*.yml'
 emitters:
-  
+  graphql:
+    module: '@gatewayapps/cradle-apollo-emitter'
+    output: './output/schema.graphql'
+    options:
+      overwrite: true
+      formatter: 'prettier'
