--- a/examples/package.json
+++ b/examples/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@gatewayapps/cradle": "^1.0.0-alpha.6",
+    "@gatewayapps/cradle-apollo-emitter": "^1.0.0-alpha.4",
+    "@gatewayapps/cradle-file-emitter": "^1.0.0-alpha.2",
     "@gatewayapps/cradle-spec-loader": "^1.1.0"
   }
 }
