--- a/examples/package.json
+++ b/examples/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.0.0-alpha.6",
+    "@gatewayapps/cradle": "^1.0.0-alpha.8",
     "@gatewayapps/cradle-file-emitter": "^1.0.0-alpha.3",
-    "@gatewayapps/cradle-graphql-emitter": "^1.0.0-alpha.5",
+    "@gatewayapps/cradle-graphql-emitter": "^1.0.0-alpha.6",
     "@gatewayapps/cradle-spec-loader": "^1.1.0"
+  },
+  "peerDependencies": {
+    "@gatewayapps/cradle-type-mappings": "^1.0.0-alpha.1"
   }
 }
