--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   },
   "publishConfig": {
     "tag": "next"
+  },
+  "peerDependencies": {
+    "@gatewayapps/cradle-type-mappings": "^1.0.0-alpha.1"
   }
 }
