--- a/package.json
+++ b/package.json
@@ -1,20 +1,4 @@
 {
-  "name": "@gatewayapps/cradle",
-  "version": "1.0.0-alpha.10",
-  "description": "",
-  "main": "./dist/index.js",
-  "bin": {
-    "cradle": "./dist/cli/CradleCLI.js"
-  },
-  "scripts": {
-    "prepublishOnly": "npm test && npx tsc",
-    "test": "npx mocha -r ts-node/register \"src/**/*.spec.ts\""
-  },
-  "files": [
-    "dist/**/*"
-  ],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/colors": "^1.2.1",
@@ -24,22 +8,15 @@
     "@types/node": "^10.5.4",
     "@types/yargs": "^11.1.1",
     "chai": "^4.1.2",
+    "lerna": "^3.15.0",
     "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "prettier": "^1.18.2",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
+  "name": "cradle",
   "dependencies": {
-    "chevrotain": "^3.7.4",
-    "colors": "^1.3.2",
-    "js-yaml": "^3.12.0",
-    "yargs": "^12.0.2"
-  },
-  "publishConfig": {
-    "tag": "next"
-  },
-  "peerDependencies": {
-    "@gatewayapps/cradle-type-mappings": "^1.0.0-alpha.1"
+    "@gatewayapps/cradle": "file:packages\\core"
   }
 }
