--- a/packages/emitters/file/package.json
+++ b/packages/emitters/file/package.json
@@ -4,30 +4,25 @@
   "description": "Base Cradle File Emitter.",
   "main": "./dist/index.js",
   "scripts": {
-    "prepublishOnly": "yarn tsc"
+    "prepublishOnly": "yarn tsc",
+    "compile": "yarn tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatewayapps/cradle-file-emitter.git"
+    "url": "git+https://github.com/gatewayapps/cradle.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gatewayapps/cradle-file-emitter/issues"
+    "url": "https://github.com/gatewayapps/cradle/issues"
   },
-  "homepage": "https://github.com/gatewayapps/cradle-file-emitter#readme",
-  "devDependencies": {
-    "@types/fs-extra": "^7.0.0",
-    "@types/node": "^12.0.8",
-    "@types/prettier": "^1.16.4",
-    "typescript": "^3.5.1"
-  },
+  "homepage": "https://github.com/gatewayapps/cradle#readme",
   "publishConfig": {
     "access": "public",
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "^1.0.0-alpha.9",
+    "@gatewayapps/cradle": "file:..\\..\\core",
     "fs-extra": "^8.0.1",
     "prettier": "^1.18.2"
   }
