--- a/packages/emitters/graphql/package.json
+++ b/packages/emitters/graphql/package.json
@@ -4,33 +4,22 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "prepublishOnly": "npx tsc",
-    "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "yarn test && yarn compile",
+    "compile": "yarn tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatewayapps/cradle-apollo-emitter.git"
+    "url": "git+https://github.com/gatewayapps/cradle.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gatewayapps/cradle-apollo-emitter/issues"
+    "url": "https://github.com/gatewayapps/cradle/issues"
   },
-  "homepage": "https://github.com/gatewayapps/cradle-apollo-emitter#readme",
-  "devDependencies": {
-    "@types/colors": "^1.2.1",
-    "@types/fs-extra": "^5.0.4",
-    "@types/lodash": "^4.14.117",
-    "@types/node": "^10.11.7",
-    "prettier": "^1.14.3",
-    "prettier-tslint": "^0.4.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
-  },
+  "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.0.0-alpha.9",
-    "@gatewayapps/cradle-file-emitter": "^1.0.0-alpha.6",
+    "@gatewayapps/cradle": "file:..\\..\\core",
+    "@gatewayapps/cradle-file-emitter": "file:../file",
     "colors": "^1.3.2",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
