--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -4,27 +4,25 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "prepublishOnly": "yarn tsc"
+    "prepublishOnly": "yarn test && yarn compile",
+    "compile": "yarn tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatewayapps/cradle-typescript-emitter.git"
+    "url": "git+https://github.com/gatewayapps/cradle.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gatewayapps/cradle-typescript-emitter/issues"
+    "url": "https://github.com/gatewayapps/cradle/issues"
   },
-  "homepage": "https://github.com/gatewayapps/cradle-typescript-emitter#readme",
+  "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.0.0-alpha.9",
-    "@gatewayapps/cradle-file-emitter": "^1.0.0-alpha.6",
+    "@gatewayapps/cradle": "file:..\\..\\core",
+    "@gatewayapps/cradle-file-emitter": "file:../file",
     "@types/node": "^12.0.8",
     "ts-morph": "^2.3.0",
     "typescript": "^3.5.2"
-  },
-  "devDependencies": {
-    "prettier": "^1.18.2"
   },
   "publishConfig": {
     "tag": "next",
