--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepublishOnly": "yarn test && yarn compile",
-    "compile": "yarn tsc",
+    "prepare": "tsc",
     "test": "yarn mocha -r ts-node/register \"src/**/*.spec.ts\""
   },
   "files": [
