--- a/packages/emitters/file/package.json
+++ b/packages/emitters/file/package.json
@@ -22,7 +22,7 @@
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "file:..\\..\\core",
+    "@gatewayapps/cradle": "^1.1.0-alpha.1",
     "fs-extra": "^8.0.1",
     "prettier": "^1.18.2"
   }
