--- a/packages/emitters/graphql/package.json
+++ b/packages/emitters/graphql/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "file:..\\..\\core",
-    "@gatewayapps/cradle-file-emitter": "file:../file",
+    "@gatewayapps/cradle": "^1.1.0-alpha.1",
     "colors": "^1.3.2",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
