--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "file:..\\..\\core",
-    "@gatewayapps/cradle-file-emitter": "file:../file",
+    "@gatewayapps/cradle": "^1.1.0-alpha.1",
     "@types/node": "^12.0.8",
     "ts-morph": "^2.3.0",
     "typescript": "^3.5.2"
