--- a/packages/loaders/spec/package.json
+++ b/packages/loaders/spec/package.json
@@ -15,7 +15,7 @@
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "file:..\\..\\core",
+    "@gatewayapps/cradle": "^1.1.0-alpha.1",
     "chevrotain": "3.7.4",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1"
