--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
       "**/.hg": true,
       "**/CVS": true,
       "**/.DS_Store": true,
-      "node_modules": false,
+      "node_modules": true,
+      "**/node_modules": true,
       "dist": false
     }
   
