--- a/packages/emitters/graphql/package.json
+++ b/packages/emitters/graphql/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@gatewayapps/cradle-graphql-emitter",
-  "version": "1.0.0-alpha.7",
+  "version": "1.1.0-alpha.2",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "prepublishOnly": "yarn test && yarn compile",
-    "compile": "yarn tsc"
+    "prepare": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,8 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.1",
+    "@gatewayapps/cradle": "^1.1.0-alpha.2",
+    "@gatewayapps/cradle-file-emitter": "^1.1.0-alpha.2",
     "colors": "^1.3.2",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
