--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@gatewayapps/cradle-typescript-emitter",
-  "version": "1.0.2",
+  "version": "1.1.0-alpha.2",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "prepublishOnly": "yarn test && yarn compile",
-    "compile": "yarn tsc"
+    "prepare": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,8 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.1",
+    "@gatewayapps/cradle": "^1.1.0-alpha.2",
+    "@gatewayapps/cradle-file-emitter": "^1.1.0-alpha.2",
     "@types/node": "^12.0.8",
     "ts-morph": "^2.3.0",
     "typescript": "^3.5.2"
