--- a/packages/loaders/spec/package.json
+++ b/packages/loaders/spec/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@gatewayapps/cradle-spec-loader",
-  "version": "1.1.1",
+  "version": "1.1.0-alpha.2",
   "main": "dist/index.js",
   "scripts": {
-    "prepublishOnly": "yarn test && yarn compile",
-    "compile": "yarn tsc"
+    "prepare": "tsc"
   },
   "repository": "https://github.com/gatewayapps/cradle",
   "author": "Daniel Gary <daniel@gatewayapps.com>",
@@ -15,7 +14,7 @@
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.1",
+    "@gatewayapps/cradle": "^1.1.0-alpha.2",
     "chevrotain": "3.7.4",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1"
