--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gatewayapps/cradle",
-  "version": "1.1.0-alpha.2",
+  "name": "@cradlejs/core",
+  "version": "0.1.0",
   "description": "",
   "main": "./dist/index.js",
   "bin": {
