--- a/packages/emitters/file/package.json
+++ b/packages/emitters/file/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gatewayapps/cradle-file-emitter",
-  "version": "1.1.0-alpha.2",
+  "name": "@cradlejs/file-emitter",
+  "version": "0.1.0",
   "description": "Base Cradle File Emitter.",
   "main": "./dist/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.2",
+    "@cradlejs/core": "^0.1.0",
     "fs-extra": "^8.0.1",
     "prettier": "^1.18.2"
   }
