--- a/packages/emitters/graphql/package.json
+++ b/packages/emitters/graphql/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gatewayapps/cradle-graphql-emitter",
-  "version": "1.1.0-alpha.2",
+  "name": "@cradlejs/graphql-emitter",
+  "version": "0.1.0",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.2",
-    "@gatewayapps/cradle-file-emitter": "^1.1.0-alpha.2",
+    "@cradlejs/core": "^0.1.0",
+    "@cradlejs/file-emitter": "^0.1.0",
     "colors": "^1.3.2",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
