--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gatewayapps/cradle-typescript-emitter",
-  "version": "1.1.0-alpha.2",
+  "name": "@cradlejs/typescript-emitter",
+  "version": "0.1.0",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/gatewayapps/cradle#readme",
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.2",
-    "@gatewayapps/cradle-file-emitter": "^1.1.0-alpha.2",
+    "@cradlejs/core": "^0.1.0",
+    "@cradlejs/file-emitter": "^0.1.0",
     "@types/node": "^12.0.8",
     "ts-morph": "^2.3.0",
     "typescript": "^3.5.2"
