--- a/packages/loaders/spec/package.json
+++ b/packages/loaders/spec/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gatewayapps/cradle-spec-loader",
-  "version": "1.1.0-alpha.2",
+  "name": "@cradlejs/spec-loader",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
     "prepare": "tsc"
@@ -14,7 +14,7 @@
     "tag": "next"
   },
   "dependencies": {
-    "@gatewayapps/cradle": "^1.1.0-alpha.2",
+    "@cradlejs/core": "^0.1.0",
     "chevrotain": "3.7.4",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1"
