added clean and prepare scripts

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "setversion": "lerna version --no-git-tag-version --yes",
+    "clean": "lerna run clean",
+    "prepare": "lerna run prepare",
+    "preprepare": "yarn clean"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/colors": "^1.2.1",
