--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,8 @@
       "**/.DS_Store": true,
       "node_modules": true,
       "**/node_modules": true,
-      "dist": false
+      "dist": true,
+      "**/dist": true
     }
   
   }
