--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
+    "clean": "rm -r ./dist",
     "prepare": "tsc"
   },
   "repository": {
