--- a/packages/loaders/spec/package.json
+++ b/packages/loaders/spec/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
+    "clean": "rm -r ./dist",
     "prepare": "tsc"
   },
   "repository": "https://github.com/gatewayapps/cradle",
