--- a/packages/emitters/typescript/package.json
+++ b/packages/emitters/typescript/package.json
@@ -27,5 +27,9 @@
   "publishConfig": {
     "tag": "next",
     "access": "public"
+  },
+  "devDependencies": {
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-markdown": "^2.0.6"
   }
 }
