--- a/packages/loaders/spec/package.json
+++ b/packages/loaders/spec/package.json
@@ -19,5 +19,9 @@
     "chevrotain": "3.7.4",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1"
+  },
+  "devDependencies": {
+    "typedoc": "^0.14.2",
+    "typedoc-plugin-markdown": "^2.0.6"
   }
 }
